# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "genawaiter"
version = "0.99.1"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"
license = "MIT"
description = "Stackless generators on stable Rust."
repository = "https://github.com/whatisaphone/genawaiter"
documentation = "https://docs.rs/genawaiter"
readme = "README-crates-io.md"
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["Cargo.toml", "README-crates-io.md", "src/**/*.rs"]

#[dependencies]
#futures-core = { version = "0.3.1", optional = true }
#proc-macro-hack = { version = "0.5", optional = true }
#genawaiter-proc-macro = { version = "0.99.1", path = "./genawaiter-proc-macro", optional = true }
#genawaiter-macro = { version = "0.99.1", path = "./genawaiter-macro", optional = true }
#genawaiter-proc-macro = { path = "./genawaiter-proc-macro", optional = true }
#genawaiter-macro = { path = "./genawaiter-macro", optional = true }

#[workspace]
#members = ["genawaiter-macro", "genawaiter-proc-macro"]

#[dev-dependencies]
#futures = "0.3.1"
#once_cell = "1.3.1"
#rustversion = "1.0.2"
#trybuild = "1"

[features]
default = ["std", "stack", "alloc", "sync"]
std = ["alloc"]
stack = []
alloc = []
sync = ["std"]
#futures03 = ["futures-core"]
futures03 = []
nightly = []
strict = []
#macro = ["genawaiter-macro"]
macro = []
#proc_macro = ["genawaiter-proc-macro", "proc-macro-hack", "genawaiter-macro/proc_macro"]
proc_macro = []
